# minesweeper-transformer

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  check_complexity.py  pyproject.toml  requirements.txt
agents/: pitfalls.md
checkpoints/repro_mps_20260613_v5_replay_S5/: best_model.pt
docs/: README.md  architecture.md  bug_report_S3_collapse.md  conventions.md  metrics.md  plan-fast-noguess-builder.md  training-log.md
nanobot/: config.json
scripts/: collect_mistakes.py  compare_board_distribution.py  doc-sync-nightly.sh  evaluate.py  generate_data.py  generate_distill_data.py  generate_rl_pool.py  incremental_builder.py  journey.py  profile_noguess.py  run_full_repro.py  train.py  train_distill.py  train_online.py  train_rl.py  train_s1.py  train_s1_5.py  train_s2.py  train_s3.py  train_s4.py  train_stage.py  train_supervised.py  visualize.py
scripts/archived/: README.md  generate_data.py  rl_env.py  rl_train.py  train_online.py
src/config/: __init__.py  data_config.py  eval_presets.py  model_config.py  recipe_config.py  stage_config.py  training_config.py  training_policy.py
src/data/: generator.py  mixed_generator.py  no_guess.py  pipeline.py  self_play.py  self_validated.py  writer.py
src/game/: game.py  probability_solver.py  solver.py
src/minesweeper/: constants.py  game.py  probability_solver.py  solver.py
src/model/: architecture.py  architecture_v1.py  architecture_v1_5.py  architecture_v5.py
src/training/: board_pool.py  checkpoints.py  dataset.py  distill.py  eval_pool.py  losses.py  (+10 more)
tests/: test_frontier.py  test_game.py  test_model.py
(+11 files in other folders)
