[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minesweeper-transformer"
version = "0.1.0"
description = "CNN + Transformer 混合架构扫雷 AI"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "tqdm>=4.64",
    "ms-toollib>=0.7",
]

[project.optional-dependencies]
viz = [
    "streamlit>=1.30",
    "plotly>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
minesweeper_transformer = ["py.typed"]
